fixed pagination problem with out/in

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="components/ng-table/ng-table.min.css"/>
+  <link rel="stylesheet" href="components/ng-table/dist/ng-table.css"/>
   <link rel="stylesheet" href="components/animate.css/animate.css">
 
   <link rel="stylesheet" href="components/angular-ui-select/dist/select.min.css">
@@ -176,7 +176,7 @@
         src="components/angular-translate-loader-partial/angular-translate-loader-partial.min.js"></script>
 <script src="scripts/util/orientdb-hint.js"></script>
 <script src="components/angular-scroll/angular-scroll.min.js"></script>
-<script src="components/ng-table/ng-table.min.js"></script>
+<script src="components/ng-table/dist/ng-table.min.js"></script>
 <script src="components/angular-bootstrap-switch/dist/angular-bootstrap-switch.min.js"></script>
 <script src="components/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
 <script src="components/angular-smart-table/dist/smart-table.js"></script>
