added calendar to backup ui

--- a/app/index.html
+++ b/app/index.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="components/c3js-chart/c3.min.css">
   <link rel="stylesheet" href="components/selectize/dist/css/selectize.css">
   <link rel="stylesheet" href="components/selectize/dist/css/selectize.bootstrap3.css">
+  <link rel="stylesheet" href="components/fullcalendar/dist/fullcalendar.min.css">
 
   <link rel="stylesheet" href="components/selectize/dist/css/selectize.default.css">
   <link rel="stylesheet" href="components/jquery-cron/cron/jquery-cron.css">
@@ -188,7 +189,10 @@
 <script src="components/selectize/dist/js/selectize.js"></script>
 <script src="components/filesize/lib/filesize.min.js"></script>
 <script src="components/noty/js/noty/packaged/jquery.noty.packaged.min.js"></script>
+
+<script src="components/fullcalendar/dist/fullcalendar.min.js"></script>
 <script src="components/TimelineJS3/compiled/js/timeline.js"></script>
+<script src="components/lodash/dist/lodash.min.js"></script>
 
 
 <!--<script type="text/javascript"-->
