New History Service

--- a/app/index.html
+++ b/app/index.html
@@ -190,7 +190,7 @@
 <script src="components/filesize/lib/filesize.min.js"></script>
 <script src="components/noty/js/noty/packaged/jquery.noty.packaged.min.js"></script>
 
-<script src="components/fullcalendar/dist/fullcalendar.min.js"></script>
+<script src="components/fullcalendar/dist/fullcalendar.js"></script>
 <script src="components/TimelineJS3/compiled/js/timeline.js"></script>
 <script src="components/lodash/dist/lodash.min.js"></script>
 
@@ -227,6 +227,7 @@
 <script src="scripts/services/bookmark-services.js"></script>
 <script src="scripts/services/aside-services.js"></script>
 <script src="scripts/services/icon-services.js"></script>
+<script src="scripts/services/history-services.js"></script>
 <script src="scripts/services/browse-services.js"></script>
 <script src="scripts/filters/filter.js"></script>
 <script src="scripts/widgets/widget.js"></script>
