Added custom label on edge + hide menu on over

--- a/app/index.html
+++ b/app/index.html
@@ -193,6 +193,7 @@
 <script src="components/fullcalendar/dist/fullcalendar.js"></script>
 <script src="components/TimelineJS3/compiled/js/timeline.js"></script>
 <script src="components/lodash/dist/lodash.min.js"></script>
+<script src="components/filesaver/FileSaver.min.js"></script>
 
 
 <!--<script type="text/javascript"-->
