First Angular 2 + JS Service

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   <!-- endbuild -->
 </head>
-<body ng-app="OrientDBStudioApp" class="antialiased" ng-class="bodyClass">
+<body  class="antialiased" ng-class="bodyClass">
 <!--[if lt IE 7]>
 <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser
   today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better
