--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
   <!-- endbuild -->
 </head>
-<body  class="antialiased" ng-class="bodyClass">
+<body class="antialiased" ng-class="bodyClass">
 <!--[if lt IE 7]>
 <p class="chromeframe">You are using an outdated browser. <a href="http://browsehappy.com/">Upgrade your browser
   today</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to better
@@ -85,6 +85,11 @@
   <!--/container-->
 </div>
 
+<!--<footer class="footer">-->
+  <!--<div class="container">-->
+    <!--<p class="text-muted">&copy; Copyright 2017 <a href="https://orientdb.com" target="_blank">OrientDB LTD</a>.</p>-->
+  <!--</div>-->
+<!--</footer>-->
 
 </body>
 </html>
